see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

28-jan-2010 Ron Severdia
# Fixed CSS bug (missing CSS for new form element)

27-jan-2010 Christophe Demko
# Correcting bugs in JForm
^ Call to $object->toString() changed to (string)$object

26-Jan-2010 Mark Dexter
^ Add sprintf, alternative readmore to com_content, newsflash views (Angie Radtke)
# Fix bug so you can load a category (Robert Deutz)
# Bug fixes in com_search, newsflash (Angi Radtke)
^ Work on com_contact layouts (Elin Waring)
# Language strings work (Elin Waring)
# Make view and config labels consistent (Elin Waring)
# Fix bug in Save & New for non-article categories
^ Work on com_contact component and model
# Fix menu assignments in sample data (Elin Waring)
# Fix routing for subcategories in com_content (Elin Waring)
# Fix problems saving data in Contact Edit form
^ Allow for hierarchical params in com_contact
# Fix default value of published state in contacts and banners
^ Improvements to sample data (Elin Waring)
# Make toolbars consistent (Elin Waring)

26-Jan-2010 Louis Landry
 # [#19552] [patch] Error loading xml from string in JFactory::getXML (Thanks to Christopher Garvis)
 # [#19542] Wrong field name in libraries/joomla/html/parameter/element/menuitem.php (Thanks to Jeff Channell)
 # [#19286] [patch] ContentModelForm has problems with error reporting (Thanks to Christopher Garvis)
 ^ [#19509] JDocumentHTML::countModules supports position names with spaces, other characters (Thanks to Jeff Fendley)
 ^ [#19453] Files tags in XML files of FO/BO modules (Thanks to Nabyl Sadki)
 # [#18611] JDate occasionally returns wrong date format (Thanks to Arlen Walker)
