@@ -129,6 +129,7 @@ JFIELD_LANGUAGE_LABEL="Language"
 JFIELD_OPTION_NONE="None"
 JFIELD_ENABLED_DESC="The enabled state of this item"
 JFIELD_ENABLED_LABEL="Enabled"
+JFIELD_SPACER_LABEL="<span style="_QQ_"width:auto"_QQ_"><hr /></span>"
 
 JACTION_USER_GROUP="User Group"
 JACTION_ADMIN="Admin"
