@@ -2,8 +2,8 @@
 <install
 	version="1.6"
 	type="plugin"
-	group="search">
-	<name>Search - Content</name>
+	group="auth">
+	<name>Authentication - LDAP</name>
 	<author>Joomla! Project</author>
 	<creationDate>November 2005</creationDate>
 	<copyright>Copyright (C) 2005 - 2010 Open Source Matters. All rights reserved.</copyright>
@@ -11,53 +11,150 @@
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
 	<version>1.5</version>
-	<description>ALLOWS SEARCHING OF ALL ARTICLES</description>
+	<description>Handles user authentication against an LDAP server</description>
 	<files>
 		<filename
-			plugin="content">content.php</filename>
+			plugin="ldap">ldap.php</filename>
 	</files>
 	<fields>
 		<field
-			name="search_limit"
+			name="host"
 			type="text"
-			size="5"
-			default="50"
-			label="Search Limit"
-			description="Number of Search items to return" />
+			size="20"
+			default=""
+			label="Host"
+			description="fieldLDAPHOST" />
+
 		<field
-			type="spacer" />
+			name="port"
+			type="text"
+			size="20"
+			default="389"
+			label="Port"
+			description="fieldLDAPPORT" />
+
 		<field
-			name="search_content"
+			name="use_ldapV3"
 			type="radio"
-			default="1"
-			label="Content Items"
-			description="Search Content Items?">
+			default="0"
+			label="LDAP V3"
+			description="fieldLDAPV3">
 			<option
 				value="0">JNo</option>
 			<option
 				value="1">JYes</option>
 		</field>
+
 		<field
-			name="search_uncategorised"
+			name="negotiate_tls"
 			type="radio"
-			default="1"
-			label="Uncategorised Content"
-			description="Search Uncategorised Content?">
+			default="0"
+			label="Negotiate TLS"
+			description="fieldNEGOCIATETLS">
 			<option
 				value="0">JNo</option>
 			<option
 				value="1">JYes</option>
 		</field>
+
 		<field
-			name="search_archived"
+			name="no_referrals"
 			type="radio"
-			default="1"
-			label="Archived Content"
-			description="Search Archived Content?">
+			default="0"
+			label="Follow referrals"
+			description="fieldFOLLOW">
 			<option
 				value="0">JNo</option>
 			<option
 				value="1">JYes</option>
 		</field>
+
+		<field
+			name="auth_method"
+			default="bind"
+			type="list"
+			label="Authorization Method"
+			description="fieldAUTHMETHOD">
+			<option
+				value="search">Bind and Search</option>
+			<option
+				value="bind">Bind Directly As User</option>
+		</field>
+
+		<field
+			name="base_dn"
+			type="text"
+			size="20"
+			default=""
+			label="Base DN"
+			description="fieldBASEDN" />
+
+		<field
+			name="search_string"
+			type="text"
+			size="20"
+			default=""
+			label="Search string"
+			description="fieldSEARCHSTRING" />
+
+		<field
+			name="users_dn"
+			type="text"
+			size="20"
+			default=""
+			label="Users DN"
+			description="fieldUSERSDN" />
+
+		<field
+			name="spacer1"
+			type="spacer"
+			hr="true" 
+			/>
+
+		<field
+			name="username"
+			type="text"
+			size="20"
+			default=""
+			label="Connect username"
+			description="fieldCONNECTSTRING" />
+
+		<field
+			name="password"
+			type="password"
+			size="20"
+			default=""
+			label="Connect password"
+			description="fieldCONNECTPASSWORD" />
+
+		<field
+			name="spacer2"
+			type="spacer"
+			hr="true" 
+			/>
+
+		<field
+			name="ldap_fullname"
+			type="text"
+			size="20"
+			default="fullName"
+			label="Map FullName"
+			description="fieldMAPFN" />
+
+		<field
+			name="ldap_email"
+			type="text"
+			size="20"
+			default="mail"
+			label="Map Email"
+			description="fieldMAPEMAIL" />
+
+		<field
+			name="ldap_uid"
+			type="text"
+			size="20"
+			default="uid"
+			label="Map User ID"
+			description="fieldMAPUID" />
 	</fields>
 </install>
